--- a/index.html
+++ b/index.html
@@ -22,20 +22,151 @@
         color: oklch(90% 0.076 70.697);
         font-family: 'Urbanist', sans-serif;
       }
-      .loader-spinner {
-        width: 48px;
-        height: 48px;
-        border: 5px solid oklch(90% 0.076 70.697 / 0.3);
-        border-bottom-color: oklch(92% 0.2653 125);
-        border-radius: 50%;
-        display: inline-block;
-        box-sizing: border-box;
-        animation: rotation 1s linear infinite;
+      
+      .custom-loader-svg {
+        width: 64px;
+        height: 64px;
       }
-      @keyframes rotation {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
+
+      .box5631 {
+        transform-origin: 50% 50%;
+        fill: currentColor;
       }
+
+      @keyframes moveBox5631-1 {
+        9.0909090909% { transform: translate(-12px, 0); }
+        18.1818181818% { transform: translate(0px, 0); }
+        27.2727272727% { transform: translate(0px, 0); }
+        36.3636363636% { transform: translate(12px, 0); }
+        45.4545454545% { transform: translate(12px, 12px); }
+        54.5454545455% { transform: translate(12px, 12px); }
+        63.6363636364% { transform: translate(12px, 12px); }
+        72.7272727273% { transform: translate(12px, 0px); }
+        81.8181818182% { transform: translate(0px, 0px); }
+        90.9090909091% { transform: translate(-12px, 0px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(1) { animation: moveBox5631-1 4s infinite; }
+
+      @keyframes moveBox5631-2 {
+        9.0909090909% { transform: translate(0, 0); }
+        18.1818181818% { transform: translate(12px, 0); }
+        27.2727272727% { transform: translate(0px, 0); }
+        36.3636363636% { transform: translate(12px, 0); }
+        45.4545454545% { transform: translate(12px, 12px); }
+        54.5454545455% { transform: translate(12px, 12px); }
+        63.6363636364% { transform: translate(12px, 12px); }
+        72.7272727273% { transform: translate(12px, 12px); }
+        81.8181818182% { transform: translate(0px, 12px); }
+        90.9090909091% { transform: translate(0px, 12px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(2) { animation: moveBox5631-2 4s infinite; }
+
+      @keyframes moveBox5631-3 {
+        9.0909090909% { transform: translate(-12px, 0); }
+        18.1818181818% { transform: translate(-12px, 0); }
+        27.2727272727% { transform: translate(0px, 0); }
+        36.3636363636% { transform: translate(-12px, 0); }
+        45.4545454545% { transform: translate(-12px, 0); }
+        54.5454545455% { transform: translate(-12px, 0); }
+        63.6363636364% { transform: translate(-12px, 0); }
+        72.7272727273% { transform: translate(-12px, 0); }
+        81.8181818182% { transform: translate(-12px, -12px); }
+        90.9090909091% { transform: translate(0px, -12px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(3) { animation: moveBox5631-3 4s infinite; }
+
+      @keyframes moveBox5631-4 {
+        9.0909090909% { transform: translate(-12px, 0); }
+        18.1818181818% { transform: translate(-12px, 0); }
+        27.2727272727% { transform: translate(-12px, -12px); }
+        36.3636363636% { transform: translate(0px, -12px); }
+        45.4545454545% { transform: translate(0px, 0px); }
+        54.5454545455% { transform: translate(0px, -12px); }
+        63.6363636364% { transform: translate(0px, -12px); }
+        72.7272727273% { transform: translate(0px, -12px); }
+        81.8181818182% { transform: translate(-12px, -12px); }
+        90.9090909091% { transform: translate(-12px, 0px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(4) { animation: moveBox5631-4 4s infinite; }
+
+      @keyframes moveBox5631-5 {
+        9.0909090909% { transform: translate(0, 0); }
+        18.1818181818% { transform: translate(0, 0); }
+        27.2727272727% { transform: translate(0, 0); }
+        36.3636363636% { transform: translate(12px, 0); }
+        45.4545454545% { transform: translate(12px, 0); }
+        54.5454545455% { transform: translate(12px, 0); }
+        63.6363636364% { transform: translate(12px, 0); }
+        72.7272727273% { transform: translate(12px, 0); }
+        81.8181818182% { transform: translate(12px, -12px); }
+        90.9090909091% { transform: translate(0px, -12px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(5) { animation: moveBox5631-5 4s infinite; }
+
+      @keyframes moveBox5631-6 {
+        9.0909090909% { transform: translate(0, 0); }
+        18.1818181818% { transform: translate(-12px, 0); }
+        27.2727272727% { transform: translate(-12px, 0); }
+        36.3636363636% { transform: translate(0px, 0); }
+        45.4545454545% { transform: translate(0px, 0); }
+        54.5454545455% { transform: translate(0px, 0); }
+        63.6363636364% { transform: translate(0px, 0); }
+        72.7272727273% { transform: translate(0px, 12px); }
+        81.8181818182% { transform: translate(-12px, 12px); }
+        90.9090909091% { transform: translate(-12px, 0px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(6) { animation: moveBox5631-6 4s infinite; }
+
+      @keyframes moveBox5631-7 {
+        9.0909090909% { transform: translate(12px, 0); }
+        18.1818181818% { transform: translate(12px, 0); }
+        27.2727272727% { transform: translate(12px, 0); }
+        36.3636363636% { transform: translate(0px, 0); }
+        45.4545454545% { transform: translate(0px, -12px); }
+        54.5454545455% { transform: translate(12px, -12px); }
+        63.6363636364% { transform: translate(0px, -12px); }
+        72.7272727273% { transform: translate(0px, -12px); }
+        81.8181818182% { transform: translate(0px, 0px); }
+        90.9090909091% { transform: translate(12px, 0px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(7) { animation: moveBox5631-7 4s infinite; }
+
+      @keyframes moveBox5631-8 {
+        9.0909090909% { transform: translate(0, 0); }
+        18.1818181818% { transform: translate(-12px, 0); }
+        27.2727272727% { transform: translate(-12px, -12px); }
+        36.3636363636% { transform: translate(0px, -12px); }
+        45.4545454545% { transform: translate(0px, -12px); }
+        54.5454545455% { transform: translate(0px, -12px); }
+        63.6363636364% { transform: translate(0px, -12px); }
+        72.7272727273% { transform: translate(0px, -12px); }
+        81.8181818182% { transform: translate(12px, -12px); }
+        90.9090909091% { transform: translate(12px, 0px); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(8) { animation: moveBox5631-8 4s infinite; }
+
+      @keyframes moveBox5631-9 {
+        9.0909090909% { transform: translate(-12px, 0); }
+        18.1818181818% { transform: translate(-12px, 0); }
+        27.2727272727% { transform: translate(0px, 0); }
+        36.3636363636% { transform: translate(-12px, 0); }
+        45.4545454545% { transform: translate(0px, 0); }
+        54.5454545455% { transform: translate(0px, 0); }
+        63.6363636364% { transform: translate(-12px, 0); }
+        72.7272727273% { transform: translate(-12px, 0); }
+        81.8181818182% { transform: translate(-24px, 0); }
+        90.9090909091% { transform: translate(-12px, 0); }
+        100% { transform: translate(0px, 0px); }
+      }
+      .box5631:nth-child(9) { animation: moveBox5631-9 4s infinite; }
     </style>
 <script type="importmap">
 {
@@ -61,12 +192,25 @@
   }
 }
 </script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root">
       <div id="initial-loader">
-        <div class="loader-spinner"></div>
+        <svg class="custom-loader-svg" version="1.1" id="cog9_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-13 -13 45 45" enable-background="new 0 0 96 96" xml:space="preserve">
+          <g>
+            <circle class="box5631" cx="13" cy="1" r="5"/>
+            <circle class="box5631" cx="13" cy="1" r="5"/>
+            <circle class="box5631" cx="25" cy="25" r="5"/>
+            <circle class="box5631" cx="13" cy="13" r="5"/>
+            <circle class="box5631" cx="13" cy="13" r="5"/>
+            <circle class="box5631" cx="25" cy="13" r="5"/>
+            <circle class="box5631" cx="1" cy="25" r="5"/>
+            <circle class="box5631" cx="13" cy="25" r="5"/>
+            <circle class="box5631" cx="25" cy="25" r="5"/>
+          </g>
+        </svg>
         <p id="loading-status" class="mt-4 text-sm">Loading application...</p>
         <div id="loading-progress-container" class="w-64 h-2 bg-base-content/10 rounded-full mt-4 overflow-hidden" style="display: none;">
           <div id="loading-progress-bar" class="h-full bg-primary rounded-full transition-all duration-300" style="width: 0%;"></div>
