--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "daisyui": "https://esm.sh/daisyui@^5.0.50",
     "lottie-web": "https://esm.sh/lottie-web@^5.12.2",
-    "@vitejs/plugin-basic-ssl": "https://esm.sh/@vitejs/plugin-basic-ssl@^2.1.4"
+    "@vitejs/plugin-basic-ssl": "https://esm.sh/@vitejs/plugin-basic-ssl@^2.1.4",
+    "gsap": "https://esm.sh/gsap@^3.14.2"
   }
 }
 </script>
