--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" data-theme="abyss">
   <head>
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kollektiv</title>
     <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="https://fonts.bunny.net/css?family=urbanist:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" />
+    <link rel="stylesheet" href="https://fonts.bunny.net/css?family=hind:400,500,600,700&display=swap" />
     <script type="text/javascript">
       // Critical: Load theme immediately to support "use current themes" during integrity check
       (function() {
@@ -37,7 +38,7 @@
         /* Use theme background variable, fallback to dark if not loaded yet */
         background-color: oklch(var(--b1, 0.1 0 0)); 
         color: white;
-        font-family: 'Urbanist', sans-serif;
+        font-family: 'Hind', sans-serif;
         transition: background-color 0.3s ease;
       }
       
@@ -211,7 +212,8 @@
     "daisyui": "https://esm.sh/daisyui@^5.0.50",
     "lottie-web": "https://esm.sh/lottie-web@^5.12.2",
     "@vitejs/plugin-basic-ssl": "https://esm.sh/@vitejs/plugin-basic-ssl@^2.1.4",
-    "gsap": "https://esm.sh/gsap@^3.14.2"
+    "gsap": "https://esm.sh/gsap@^3.14.2",
+    "gsap/": "https://esm.sh/gsap@^3.14.2/"
   }
 }
 </script>
