--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kollektiv</title>
-    <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="https://fonts.bunny.net/css?family=hind:400,500,600,700&display=swap" />
     <script type="text/javascript">
       // Critical: Load theme immediately to support "use current themes" during integrity check
@@ -22,173 +21,7 @@
         } catch (e) {}
       })();
     </script>
-    <style type="text/css">
-      html, body, #root {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      #initial-loader {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-        /* Use theme background variable, fallback to dark if not loaded yet */
-        background-color: oklch(var(--b1, 0.1 0 0)); 
-        color: oklch(var(--bc, 1 1 1));
-        font-family: 'Hind', sans-serif;
-        transition: background-color 0.3s ease;
-      }
-      
-      .loader-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .box5631 {
-        transform-origin: 50% 50%;
-        /* Adapt to primary theme color */
-        fill: oklch(var(--p, 0.6 0.2 260));
-      }
-
-      @keyframes moveBox5631-1 {
-        9.0909090909% { transform: translate(-12px, 0); }
-        18.1818181818% { transform: translate(0px, 0); }
-        27.2727272727% { transform: translate(0px, 0); }
-        36.3636363636% { transform: translate(12px, 0); }
-        45.4545454545% { transform: translate(12px, 12px); }
-        54.5454545455% { transform: translate(12px, 12px); }
-        63.6363636364% { transform: translate(12px, 12px); }
-        72.7272727273% { transform: translate(12px, 0px); }
-        81.8181818182% { transform: translate(0px, 0px); }
-        90.9090909091% { transform: translate(-12px, 0px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(1) { animation: moveBox5631-1 4s infinite; }
-
-      @keyframes moveBox5631-2 {
-        9.0909090909% { transform: translate(0, 0); }
-        18.1818181818% { transform: translate(12px, 0); }
-        27.2727272727% { transform: translate(0px, 0); }
-        36.3636363636% { transform: translate(12px, 0); }
-        45.4545454545% { transform: translate(12px, 12px); }
-        54.5454545455% { transform: translate(12px, 12px); }
-        63.6363636364% { transform: translate(12px, 12px); }
-        72.7272727273% { transform: translate(12px, 12px); }
-        81.8181818182% { transform: translate(0px, 12px); }
-        90.9090909091% { transform: translate(0px, 12px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(2) { animation: moveBox5631-2 4s infinite; }
-
-      @keyframes moveBox5631-3 {
-        9.0909090909% { transform: translate(-12px, 0); }
-        18.1818181818% { transform: translate(-12px, 0); }
-        27.2727272727% { transform: translate(0px, 0); }
-        36.3636363636% { transform: translate(-12px, 0); }
-        45.4545454545% { transform: translate(-12px, 0); }
-        54.5454545455% { transform: translate(-12px, 0); }
-        63.6363636364% { transform: translate(-12px, 0); }
-        72.7272727273% { transform: translate(-12px, 0); }
-        81.8181818182% { transform: translate(-12px, -12px); }
-        90.9090909091% { transform: translate(0px, -12px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(3) { animation: moveBox5631-3 4s infinite; }
-
-      @keyframes moveBox5631-4 {
-        9.0909090909% { transform: translate(-12px, 0); }
-        18.1818181818% { transform: translate(-12px, 0); }
-        27.2727272727% { transform: translate(-12px, -12px); }
-        36.3636363636% { transform: translate(0px, -12px); }
-        45.4545454545% { transform: translate(0px, 0px); }
-        54.5454545455% { transform: translate(0px, -12px); }
-        63.6363636364% { transform: translate(0px, -12px); }
-        72.7272727273% { transform: translate(0px, -12px); }
-        81.8181818182% { transform: translate(-12px, -12px); }
-        90.9090909091% { transform: translate(-12px, 0px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(4) { animation: moveBox5631-4 4s infinite; }
-
-      @keyframes moveBox5631-5 {
-        9.0909090909% { transform: translate(0, 0); }
-        18.1818181818% { transform: translate(0, 0); }
-        27.2727272727% { transform: translate(0, 0); }
-        36.3636363636% { transform: translate(12px, 0); }
-        45.4545454545% { transform: translate(12px, 0); }
-        54.5454545455% { transform: translate(12px, 0); }
-        63.6363636364% { transform: translate(12px, 0); }
-        72.7272727273% { transform: translate(12px, 0); }
-        81.8181818182% { transform: translate(12px, -12px); }
-        90.9090909091% { transform: translate(0px, -12px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(5) { animation: moveBox5631-5 4s infinite; }
-
-      @keyframes moveBox5631-6 {
-        9.0909090909% { transform: translate(0, 0); }
-        18.1818181818% { transform: translate(-12px, 0); }
-        27.2727272727% { transform: translate(-12px, 0); }
-        36.3636363636% { transform: translate(0px, 0); }
-        45.4545454545% { transform: translate(0px, 0); }
-        54.5454545455% { transform: translate(0px, 0); }
-        63.6363636364% { transform: translate(0px, 0); }
-        72.7272727273% { transform: translate(0px, 12px); }
-        81.8181818182% { transform: translate(-12px, 12px); }
-        90.9090909091% { transform: translate(-12px, 0px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(6) { animation: moveBox5631-6 4s infinite; }
-
-      @keyframes moveBox5631-7 {
-        9.0909090909% { transform: translate(12px, 0); }
-        18.1818181818% { transform: translate(12px, 0); }
-        27.2727272727% { transform: translate(12px, 0); }
-        36.3636363636% { transform: translate(0px, 0); }
-        45.4545454545% { transform: translate(0px, -12px); }
-        54.5454545455% { transform: translate(0px, -12px); }
-        63.6363636364% { transform: translate(0px, -12px); }
-        72.7272727273% { transform: translate(0px, -12px); }
-        81.8181818182% { transform: translate(0px, 0px); }
-        90.9090909091% { transform: translate(12px, 0px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(7) { animation: moveBox5631-7 4s infinite; }
-
-      @keyframes moveBox5631-8 {
-        9.0909090909% { transform: translate(0, 0); }
-        18.1818181818% { transform: translate(-12px, 0); }
-        27.2727272727% { transform: translate(-12px, -12px); }
-        36.3636363636% { transform: translate(0px, -12px); }
-        45.4545454545% { transform: translate(0px, -12px); }
-        54.5454545455% { transform: translate(0px, -12px); }
-        63.6363636364% { transform: translate(0px, -12px); }
-        72.7272727273% { transform: translate(0px, -12px); }
-        81.8181818182% { transform: translate(12px, -12px); }
-        90.9090909091% { transform: translate(12px, 0px); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(8) { animation: moveBox5631-8 4s infinite; }
-
-      @keyframes moveBox5631-9 {
-        9.0909090909% { transform: translate(-12px, 0); }
-        18.1818181818% { transform: translate(-12px, 0); }
-        27.2727272727% { transform: translate(0px, 0); }
-        36.3636363636% { transform: translate(-12px, 0); }
-        45.4545454545% { transform: translate(0px, 0); }
-        54.5454545455% { transform: translate(0px, 0); }
-        63.6363636364% { transform: translate(-12px, 0); }
-        72.7272727273% { transform: translate(-12px, 0); }
-        81.8181818182% { transform: translate(-24px, 0); }
-        90.9090909091% { transform: translate(-12px, 0); }
-        100% { transform: translate(0px, 0px); }
-      }
-      .box5631:nth-child(9) { animation: moveBox5631-9 4s infinite; }
-    </style>
+    <!-- Loader styles moved to index.css -->
 <script type="importmap">
 {
   "imports": {
@@ -218,7 +51,6 @@
 }
 </script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root">
